cmake_minimum_required(VERSION 3.22)
project(Laborator_6_7)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laborator_6_7 main.cpp domain.cpp domain.h service.cpp service.h repository.cpp repository.h validare.cpp validare.h ui.cpp ui.h tests.cpp tests.h exceptions.cpp exceptions.h VectorDinamicTemplate.cpp VectorDinamicTemplate.h)

