cmake_minimum_required(VERSION 3.22)
project(Laborator_8_9)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laborator_8_9 main.cpp domain.cpp exceptions.cpp repository.cpp service.cpp tests.cpp ui.cpp validare.cpp Contract.cpp Contract.h repositoryFile.cpp repositoryFile.h undo.cpp undo.h undo.h undo.h)
